<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="127dp"
        android:layout_height="31dp"
        android:text="Nombre"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtPreguntaSeriesPelis"
        android:layout_width="221dp"
        android:layout_height="25dp"
        android:text="@string/encuestaPreg1"
        android:textColor="#AAA7A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txtPreguntaCalidad"
        android:layout_width="343dp"
        android:layout_height="32dp"
        android:text="@string/encuestaPreg6"
        android:textColor="#AAA7A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/txtPeliculasSemanales"
        android:layout_width="249dp"
        android:layout_height="28dp"
        android:text="@string/encuestaPreg4"
        android:textColor="#AAA7A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <TextView
        android:id="@+id/txtTiposDePelis"
        android:layout_width="256dp"
        android:layout_height="29dp"
        android:text="@string/encuestaPreg3"
        android:textColor="#AAA7A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/txtPreguntaSaga"
        android:layout_width="218dp"
        android:layout_height="23dp"
        android:text="@string/encuestaPreg2"
        android:textColor="#AAA7A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/txtPreguntaAnime"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:text="@string/encuestaPreg5"
        android:textColor="#AAA7A7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <TextView
        android:id="@+id/txtValorEncuesta"
        android:layout_width="35dp"
        android:layout_height="27dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <SeekBar
        android:id="@+id/sBarValorEncuesta"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:max="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <Switch
        android:id="@+id/swAnime"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:text="Anime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/rdGroupSaga"
        android:layout_width="155dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" >

        <RadioButton
            android:id="@+id/rdBtnAnillo"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/encuestaPreg2Res1" />

        <RadioButton
            android:id="@+id/rdBtnMarvel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/encuestaPreg2Res2" />

        <RadioButton
            android:id="@+id/rdBtnMision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuestaPreg2res3" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rdGroupPelisSeries"
        android:layout_width="155dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <RadioButton
            android:id="@+id/rdBtnPeli"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/encuestaPreg1Res1" />

        <RadioButton
            android:id="@+id/rdBtnSerie"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/encuestaPreg1Res2" />

        <RadioButton
            android:id="@+id/rdBtnAmbas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuestaPreg1Res3" />
    </RadioGroup>


    <SeekBar
        android:id="@+id/sBarPeliculas"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:max="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:id="@+id/txtNumeroPeliculas"
        android:layout_width="35dp"
        android:layout_height="27dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEnviar"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnReinciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSalir"
            android:textSize="12dp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdGroupTipoPeli"
        android:layout_width="152dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552">

        <CheckBox
            android:id="@+id/chkAccion"
            android:layout_width="122dp"
            android:layout_height="33dp"
            android:text="@string/encuestaPreg3Res1" />

        <CheckBox
            android:id="@+id/chkCienciaFiccion"
            android:layout_width="122dp"
            android:layout_height="33dp"
            android:text="@string/encuestaPreg3Res2" />

        <CheckBox
            android:id="@+id/chkRomanticas"
            android:layout_width="122dp"
            android:layout_height="33dp"
            android:text="@string/encuestaPreg3Res3" />
    </RadioGroup>




</androidx.constraintlayout.widget.ConstraintLayout>